# hooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
hooks/: bump_version.py  trailing_whitespace_fixer.py
